<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.SignInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:text="@string/title_name_mobile"
                android:gravity="center_horizontal|center_vertical"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:tint="@color/white"
                android:backgroundTint="@color/white"
                android:src="@drawable/ic_baseline_note_alt_24"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnSignVK"
            style="@style/ButtonClickStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_sign_in_vk"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btnSignToApp"
            style="@style/ButtonClickStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_sign_in_not_auto"
            app:backgroundTint="@null" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>