<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_white_rounded"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitleName"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/title_name_audio_note"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvDateEnd"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_name_date_create"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvMeta"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/inter"
            android:gravity="center|right"
            android:paddingRight="10dp"
            android:text="@string/duration_audio_note"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/playAudioNote"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/background_play_audio_note"
            android:src="@mipmap/play_audio_note"
            app:tint="@color/white" />

    </LinearLayout>


</LinearLayout>